--- a/index.html
+++ b/index.html
@@ -65,10 +65,21 @@ Welcome Slider
 ==================================== -->
 
 <section class="hero-area">
+    <div class="top-logo1">
+        <img src='images/nsit-white.jpg'>
+    </div>
+    <div class="top-logo2">
+        <img src='images/teamc-logo.jpg'>
+    </div>
+    <div class="video-button NSITvideo-button">
+        <img src='images/logos/TC LOGO.png' />
+    </div>
+    <div class="video-button TEAMCvideo-button">
+        <img src='images/logos/NSIT-Logo.png' />
+    </div>
 	<div class="block">
 		<div class="video-button">
 			<img src='images/HACKEAM.png' />
-
 		</div>
 		<h1>HACKEAM-18</h1>
 		<p>Short description to be added if reqd</p>
@@ -131,60 +142,59 @@ Welcome Slider
 <!--
 		Start About Section
 		==================================== -->
-		<section class="bg-one about section">
-			<div class="container">
+		<section class="bg-one about section"id='about'>
+			<div class="container" >
 				<div class="row">
 
 					<!-- section title -->
 					<div class="title text-center wow fadeIn" data-wow-duration="1500ms" >
-						<h2>About <span class="color">Us</span> </h2>
+						<h2 >About <span class="color">Us</span> </h2>
 						<div class="border"></div>
 					</div>
 					<!-- /section title -->
 
 					<!-- About item -->
-					<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="500ms" >
+					<div class="col-md-12 text-center wow fadeInUp" data-wow-duration="500ms" >
 						<div class="block">
 							<div class="icon-box">
-								<i class="tf-tools"></i>
+								<img id="tcLog1" src="images/logos/TC LOGO.png"/>
+                                <!-- <h6>TEAMClogo to be inserted<h6> -->
 							</div>
+
 							<!-- Express About Yourself -->
 							<div class="content text-center">
-								<h3 class="ddd">We're Creative</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p>
+								<h3 class="ddd">TEAMC-18</h3>
+								<p>The International Conference, Towards Extensible and Adaptable Methods in Computing – TEAMC 2018, will be held during 26-28 March, 2018 under the aegis of Netaji Subhas Institute of Technology (NSIT), New Delhi. This conference will provide an excellent opportunity to researchers, practitioners and students to share ideas, discuss best practices and collaborate together to solve problems in convergent domains of computing that strive towards extensibility and adaptability.
+<br><br>
+TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligence, Computing in Education and Machine Learning as its tracks.
 							</div>
 						</div>
 					</div>
 					<!-- End About item -->
 
 					<!-- About item -->
-					<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="250ms">
-						<div class="block">
+					<div class="col-md-6 col-md-offset-3 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="250ms" >
+						<div class="block" style="background:white">
 							<div class="icon-box">
-								<i class="tf-strategy"></i>
+								<!-- <i class="tf-strategy"></i> -->
+                                <img src='images/HACKEAM.png' width=100px style="margin-top:-15%"/>
+
 							</div>
 							<!-- Express About Yourself -->
-							<div class="content text-center">
-								<h3>We're Professional</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p>
+							<div class="content text-center" style="color:black">
+								<h3 style="color:black">Our Objective</h3>
+								<p>The main objective of this hackathon is to sensitize students and professionals about existing problems of the under privileged and lesser developed sections of our society and providing a platform whereby
+                                     they can proactively develop and showcase technological
+                                     solutions for these challenges. <br>
+                                     The Hackathon will be held in phases after completion
+                                 of which worthy teams will get a chance to present their
+                                 experience , product and report in the esteemed TEAMC conference</p>
 							</div>
 						</div>
 					</div>
 					<!-- End About item -->
 
 					<!-- About item -->
-					<div class="col-md-4 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="500ms">
-						<div class="block kill-margin-bottom">
-							<div class="icon-box">
-								<i class="tf-anchor2"></i>
-							</div>
-							<!-- Express About Yourself -->
-							<div class="content text-center">
-								<h3>We're Genius</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p>
-							</div>
-						</div>
-					</div>
 					<!-- End About item -->
 
 				</div> 		<!-- End row -->
@@ -199,7 +209,7 @@ Welcome Slider
 			</div>
 			<div class="col-md-6">
 				<div class="content-block">
-					<h2>We’re A Digital Design Agency.</h2>
+					<h2>We’re A Different Hackathon</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora itaque, autem dolores culpa cum mollitia voluptate nesciunt voluptatibus quasi.</p>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eveniet vel et mollitia nemo corporis sed ut, exercitationem incidunt, rerum nam doloremque quos ratione doloribus, officiis adipisci error quasi soluta?</p>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, magnam.</p>
@@ -210,7 +220,7 @@ Welcome Slider
 									<i class="tf-circle-compass"></i>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">SEO Optimized</h4>
+									<h4 class="media-heading">Paper oriented</h4>
 									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe</p>
 								</div>
 							</div>
@@ -221,7 +231,7 @@ Welcome Slider
 									<i class="tf-hotairballoon"></i>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">Easy Customization</h4>
+									<h4 class="media-heading">We've got 'treks'</h4>
 									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus </p>
 								</div>
 							</div>
@@ -240,9 +250,9 @@ Start Call To Action
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h2>Great Design & Incredible Features</h2>
+				<h2>Register</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis tenetur odio impedit incidunt? <br> Omnis accusantium ea reiciendis, fugit commodi nostrum.</p>
-				<a href="#" class="btn btn-main">Start a project with us</a>
+				<a href="#" class="btn btn-main">Click here to register</a>
 			</div>
 		</div> 		<!-- End row -->
 	</div>   	<!-- End container -->
