--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Start Call To Action
 
 			<!-- section title -->
 			<div class="title text-center wow fadeIn" data-wow-duration="500ms">
-				<h2>Our <span class="color">Services</span></h2>
+				<h2>Our <span class="color">Treks</span></h2>
 				<div class="border"></div>
 			</div>
 			<!-- /section title -->
@@ -278,7 +278,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-globe"></i>
 					</div>
-					<h3>WordPress Theme</h3>
+					<h3>Rural and Sub-Urban</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -290,7 +290,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-ion-laptop"></i>
 					</div>
-					<h3>Responsive Design</h3>
+					<h3>Education</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -302,7 +302,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-genius"></i>
 					</div>
-					<h3>Media &amp; Advertisement</h3>
+					<h3>Waste Management</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -314,7 +314,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-dial"></i>
 					</div>
-					<h3>Graphic Design</h3>
+					<h3>HealthCare</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -326,7 +326,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-target3"></i>
 					</div>
-					<h3>Apps Development</h3>
+					<h3>Government Offices</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -338,7 +338,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-lifesaver"></i>
 					</div>
-					<h3>Networking</h3>
+					<h3>Triposse(another trek)</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -429,7 +429,7 @@ Start Call To Action
 
 						<!-- section title -->
 						<div class="title text-center">
-							<h2>Our <span class="color">Works</span></h2>
+							<h2><span class="color">The Phases</span></h2>
 							<div class="border"></div>
 						</div>
 						<!-- /section title -->
@@ -438,10 +438,10 @@ Start Call To Action
 				<div class="row">
 						<div class="col-md-12">
 							<div class="portfolio-filter">
-								<button  type="button" data-filter="all">All</button>
-								<button type="button" data-filter=".photography">Photography</button>
-								<button type="button" data-filter=".design">Design</button>
-								<button type="button" data-filter=".development">Development</button>
+								<!-- <button  type="button" data-filter="all">All</button> -->
+								<button type="button" data-filter=".photography">Phase 1</button>
+								<button type="button" data-filter=".design">Phase 2</button>
+								<button type="button" data-filter=".development">Phase 3</button>
 							</div>
 						</div>
 					</div>
