--- a/index.html
+++ b/index.html
@@ -438,15 +438,34 @@ Start Call To Action
 				<div class="row">
 						<div class="col-md-12">
 							<div class="portfolio-filter">
-								<!-- <button  type="button" data-filter="all">All</button> -->
-								<button type="button" data-filter=".photography">Phase 1</button>
-								<button type="button" data-filter=".design">Phase 2</button>
-								<button type="button" data-filter=".development">Phase 3</button>
+                                <p style="font-size:18px;">Hackeam is a unique hackathon that proceeds through phases and leads to an international conference. As teams of multi-disciplinary talents go through these phases,  they will experience the joys of visits to various places, interacting, reporting, designing, coding and paper writing.
+All teams wishing to participate in the hackathon must register themselves by the last date. Teams must strictly adhere to the rules as set by the organisers.
+<br> <br>The competition culminates in 3 phases
+</p>
+<br><br>
+                                <button  id='phase1'type="button" data-filter=".phase1">Phase 1</button>
+								<!-- <button type="button" data-filter=".phase1" class="mixitup-control-active">Phase 1</button> -->
+                                <a href='#phase'>
+								<button id='phase'type="button" data-filter=".phase2">Phase 2</button>
+								<button type="button" data-filter=".phase3">Phase 3</button>
+                                </a>
 							</div>
 						</div>
 					</div>
+
 					<div class="row portfolio-items-wrapper">
-						<div class="mix col-md-4 design">
+                        <div  id='ph1'>
+
+                        </div>
+                        <div class="mix col-md-12 phase1 text-center">
+                                <div class="portolio-block" style="margin:100px auto; margin-top:10px">
+                                            <h3 >PHASE 1</h3>
+                                        <h4>
+                                        In this phase, the registered teams need to visit a Place of Interest (POI) which may be a rural or semi-urban area for the  Rural  Trek, a healthcare center for the Health Trek , a School or institution for Education Trek. Participants will document their visit using text, interviews, and photographs. The POI to be explored may or may not  be one of the pre-designated areas listed by the organizers or chosen by the participants themselves.
+                                    </h4>
+                                </div>
+                        </div>
+                        <div class="mix col-md-4 phase1">
 							<div class="portfolio-block">
 								<img class="img-responsive" src="images/portfolio/portfolio-1.jpg" alt="">
 								<div class="caption">
@@ -454,109 +473,133 @@ Start Call To Action
 									<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-1.jpg" data-lightbox="image-1">
 										<i class="tf-ion-android-search"></i>
 									</a>
-									<h4><a href="">Tag Design</a></h4>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
+									<h4><a href="">Photographs</a></h4>
+									<p>include geotagged photos to make your journal authentic</p>
 								</div>
 							</div>
 						</div>
-						<div class="mix col-md-4 design">
+						<div class="mix col-md-4 phase1">
 							<div class="portfolio-block">
 									<img class="img-responsive" src="images/portfolio/portfolio-2.jpg" alt="">
 									<div class="caption">
 										<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-2.jpg" data-lightbox="image-1">
 											<i class="tf-ion-android-search"></i>
 										</a>
-										<h4><a href="">Sound system</a></h4>
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
+										<h4><a href="">Interviews</a></h4>
+										<p>Interview people to get to the root of their problems</p>
 									</div>
 								</div>
 						</div>
-						<div class="mix col-md-4 design development">
+						<div class="mix col-md-4 phase1">
 							<div class="portfolio-block">
 									<img class="img-responsive" src="images/portfolio/portfolio-3.jpg" alt="">
 									<div class="caption">
 										<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-3.jpg" data-lightbox="image-1">
 											<i class="tf-ion-android-search"></i>
 										</a>
-										<h4><a href="">Clock Product</a></h4>
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
+										<h4><a href="">Analyse</a></h4>
+										<p>Analyse the problems that people in the Treks are facing <br> #getToTheCore</p>
 									</div>
 								</div>
-						</div>
-						<div class="mix col-md-4 photography development">
-							<div class="portfolio-block">
-									<img class="img-responsive" src="images/portfolio/portfolio-4.jpg" alt="">
-									<div class="caption">
-										<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-4.jpg" data-lightbox="image-1">
-											<i class="tf-ion-android-search"></i>
-										</a>
-										<h4><a href="">Bottol Label</a></h4>
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-									</div>
-								</div>
-						</div>
-						<div class="mix col-md-4 design">
-							<div class="portfolio-block">
-									<img class="img-responsive" src="images/portfolio/portfolio-5.jpg" alt="">
-									<div class="caption">
-										<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-5.jpg" data-lightbox="image-1">
-											<i class="tf-ion-android-search"></i>
-										</a>
-										<h4><a href="">Shopping Bag</a></h4>
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-									</div>
-								</div>
-						</div>
-						<div class="mix col-md-4 photography" >
-							<div class="portfolio-block">
-									<img class="img-responsive" src="images/portfolio/portfolio-6.jpg" alt="">
-									<div class="caption">
-										<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-6.jpg" data-lightbox="image-1">
-											<i class="tf-ion-android-search"></i>
-										</a>
-										<h4><a href="">Tag Design</a></h4>
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-									</div>
-								</div>
-						</div>
-						<div class="mix col-md-4 design">
-							<div class="portfolio-block">
-									<img class="img-responsive" src="images/portfolio/portfolio-7.jpg" alt="">
-									<div class="caption">
-										<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-7.jpg" data-lightbox="image-1">
-											<i class="tf-ion-android-search"></i>
-										</a>
-										<h4><a href="">Business Card</a></h4>
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-									</div>
-								</div>
-						</div>
-						<div class="mix col-md-4 design">
-							<div class="portfolio-block">
-									<img class="img-responsive" src="images/portfolio/portfolio-8.jpg" alt="">
-									<div class="caption">
-										<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-8.jpg" data-lightbox="image-1">
-											<i class="tf-ion-android-search"></i>
-										</a>
-										<h4><a href="">Stationary Design</a></h4>
-										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-									</div>
-								</div>
-						</div>
-						<div class="mix col-md-4  photography development">
-							<div class="portfolio-block">
-								<img class="img-responsive" src="images/portfolio/portfolio-1.jpg" alt="">
-								<div class="caption">
-									<a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-1.jpg" data-lightbox="image-1">
-										<i class="tf-ion-android-search"></i>
-									</a>
-									<h4><a href="">Tag Design</a></h4>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nemo!</p>
-								</div>
-							</div>
 						</div>
 
-					</div>
+<!-- phase 2 -->
+                        <div class="mix col-md-12 phase2 text-center">
+                                <div class="portolio-block" style="margin:100px auto; margin-top:10px">
+                                            <h3 >PHASE 2</h3>
+                                        <h4>
+                                            Teams will now begin the second part of their paper (Part B) that describes the system design of their proposed solution. All teams will be invited to be a part of the hackathon, HACKEAM 2018 during 30-31 Jan 2018. The implementation of their design will be done during the hackathon.
+                                    </h4>
+                                </div>
+                        </div>
+                        <div class="mix col-md-4 phase2">
+                            <div class="portfolio-block">
+                                <img class="img-responsive" src="images/portfolio/portfolio-1.jpg" alt="">
+                                <div class="caption">
+
+                                    <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-1.jpg" data-lightbox="image-1">
+                                        <i class="tf-ion-android-search"></i>
+                                    </a>
+                                    <h4><a href="">Design</a></h4>
+                                    <p>include geotagged photos to make your journal authentic</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mix col-md-4 phase2">
+                            <div class="portfolio-block">
+                                    <img class="img-responsive" src="images/portfolio/portfolio-2.jpg" alt="">
+                                    <div class="caption">
+                                        <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-2.jpg" data-lightbox="image-1">
+                                            <i class="tf-ion-android-search"></i>
+                                        </a>
+                                        <h4><a href="">Develop</a></h4>
+                                        <p>Interview people to get to the root of their problems</p>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="mix col-md-4 phase2">
+                            <div class="portfolio-block">
+                                    <img class="img-responsive" src="images/portfolio/portfolio-3.jpg" alt="">
+                                    <div class="caption">
+                                        <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-3.jpg" data-lightbox="image-1">
+                                            <i class="tf-ion-android-search"></i>
+                                        </a>
+                                        <h4><a href="">Code</a></h4>
+                                        <p>Analyse the problems that people in the Treks are facing <br> #getToTheCore</p>
+                                    </div>
+                                </div>
+                        </div>
+<!-- phase 2 -->
+                        <div class="mix col-md-12 phase3 text-center">
+                                <div class="portolio-block" style="margin:100px auto; margin-top:10px">
+                                            <h3 >PHASE 3</h3>
+                                        <h4>
+                                            Teams will get an excellent opportunity to showcase their work in the prestigious International Conference  TEAMC 2018 during March 26-28, 2018 (www.teamc18.com) at NSIT, in front of an international audience of researchers, industry leaders and government officials. Efforts will be made to carry forward potentially promising submissions so that they can be fully developed into working prototypes and products with the assistance of incubation centers.
+<br><br>
+Teams need to complete Part B their paper by adding experimental results and conclusion and submit the final paper comprising both Part A and Part B, by 10 Feb, 2018. The total length of the paper should not exceed 14 pages. At least one member of each team will have to  register for TEAMC 2018 if they wish to present their paper.
+<br><br>
+The paper submissions will be reviewed and selected papers will be invited to present their papers. They will be published in an indexed Journal with ISBN. The best paper will be given the <span class='color'>Best Paper Award</span> in Hackathon category.
+                                    </h4>
+                                </div>
+                        </div>
+                        <div class="mix col-md-4 phase3">
+                            <div class="portfolio-block">
+                                <img class="img-responsive" src="images/portfolio/portfolio-1.jpg" alt="">
+                                <div class="caption">
+
+                                    <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-1.jpg" data-lightbox="image-1">
+                                        <i class="tf-ion-android-search"></i>
+                                    </a>
+                                    <h4><a href="">Design</a></h4>
+                                    <p>include geotagged photos to make your journal authentic</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mix col-md-4 phase3">
+                            <div class="portfolio-block">
+                                    <img class="img-responsive" src="images/portfolio/portfolio-2.jpg" alt="">
+                                    <div class="caption">
+                                        <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-2.jpg" data-lightbox="image-1">
+                                            <i class="tf-ion-android-search"></i>
+                                        </a>
+                                        <h4><a href="">Develop</a></h4>
+                                        <p>Interview people to get to the root of their problems</p>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="mix col-md-4 phase3">
+                            <div class="portfolio-block">
+                                    <img class="img-responsive" src="images/portfolio/portfolio-3.jpg" alt="">
+                                    <div class="caption">
+                                        <a class="search-icon image-popup" data-effect="mfp-with-zoom" href="images/portfolio/portfolio-3.jpg" data-lightbox="image-1">
+                                            <i class="tf-ion-android-search"></i>
+                                        </a>
+                                        <h4><a href="">Code</a></h4>
+                                        <p>Analyse the problems that people in the Treks are facing <br> #getToTheCore</p>
+                                    </div>
+                                </div>
+                            </div>
+    				</div>
 
 
 
