--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Welcome Slider
 		<h1>HACKEAM-18</h1>
         <p>Trek. Report. Hack. Adapt. Achieve</p>
 		<!-- <p><span class="color">T</span>rek/. <span class="color">E</span>xplore. <span class="color">A</span>nalyse. <span class="color">M</span>odel. <span class="color">C</span>onquer</p> -->
-		<a data-scroll href="#services" class="btn btn-transparent">Explore Us</a>
+		<a data-scroll href="#about" class="btn btn-transparent">Explore Us</a>
 	</div>
 </section>
 
@@ -105,7 +105,7 @@ Welcome Slider
                 <!-- /responsive nav button -->
 
                 <!-- logo -->
-                <a class="navbar-brand logo" href="#body">
+                <a class="navbar-brand logo" href='#'>
                     <img src="images/HACKEAM.png" alt="Hackeam" />
                     <!-- <svg width="40px" height="40px" viewBox="0 0 45 44" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -125,12 +125,17 @@ Welcome Slider
             <ul id="nav" class="nav navbar-nav navigation-menu">
                 <li><a data-scroll href="#body">Home</a></li>
                 <li><a data-scroll href="#about">About Us</a></li>
-                <li><a data-scroll href="#services">Timeline</a></li>
-                <li><a data-scroll href="#portfolio">Register</a></li>
-                <li><a data-scroll href="#our-team">Treks</a></li>
-                <li><a data-scroll href="#pricing">Our Sponsors</a></li>
-                <!-- <li><a data-scroll href="#blog">Blog</a></li> -->
+                <li><a data-scroll href="#register">Register</a></li>
+                <li><a data-scroll href="#trek">Treks</a></li>
+                <li><a data-scroll href="#timeline">Timeline</a></li>
+                <li><a data-scroll href="#phases123">Phases</a></li>
+                <li><a data-scroll href="#sponsors">Sponsors</a></li>
+
+                <li><a data-scroll href="#team">Team</a></li>
+                <li><a data-scroll href="#rules">Rules</a></li>
+                <li><a data-scroll href="#FAQS">FAQs</a></li>
                 <li><a data-scroll href="#contact-us">Contact Us</a></li>
+                <!-- <li><a data-scroll href="#blog">Blog</a></li> -->
             </ul>
         </nav>
         <!-- /main nav -->
@@ -246,7 +251,7 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
 <!--
 Start Call To Action
 ==================================== -->
-<section class="call-to-action section-sm bg-1 overly">
+<section id="register"class="call-to-action section-sm bg-1 overly">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
@@ -254,7 +259,7 @@ Start Call To Action
 				<p>
 				    Register in this new unique and exciting hackathon o win prizes worth a ton.
 				</p>
-                <a href="#" class="btn btn-main">Click here to register</a>
+                <a href="" class="btn btn-main">Coming Soon</a>
 			</div>
 		</div> 		<!-- End row -->
 	</div>   	<!-- End container -->
@@ -263,7 +268,7 @@ Start Call To Action
 <!-- Start Services Section
 ==================================== -->
 
-<section id="services" class="bg-one section">
+<section id="trek" class="bg-one section">
 	<div class="container">
 		<div class="row">
 
@@ -355,7 +360,7 @@ Start Call To Action
 <!-- Start Team Skills
 		=========================================== -->
 
-		<section id="team-skills" class="parallax-section section section-bg overly">
+		<section id="timeline" class="parallax-section section section-bg overly">
 			<div class="container">
 				<div class="row" >
 					<!-- section title -->
@@ -440,7 +445,7 @@ Start Call To Action
 <!-- Start Portfolio Section
 		=========================================== -->
 
-		<section class="portfolio section" id="portfolio">
+		<section class="portfolio section" id="phases123">
 			<div class="container">
 				<div class="row " >
 					<div class="col-lg-12">
@@ -644,11 +649,34 @@ Start Counter Section
 		</div>
     </div>
 </section>  -->
+<!-- Start Pricing section
+		=========================================== -->
+
+		<section id="sponsors" class="pricing section">
+			<div class="container">
+				<div class="row <text-center></text-center>">
+
+					<!-- section title -->
+				    <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
+			        	<h2>Our<span class="color"> Sponsors</span></h2>
+				        <div class="border"></div>
+				    </div>
+                    <img src="./images/comingsoon.png" alt="" class="img-responsive" style="margin:0 auto">
+				    <!-- /section title -->
+                        <!-- <h1>COMING SOON</h1> -->
+					<!-- single pricing table -->
+					<!-- end single pricing table -->
+
+
+				</div>       <!-- End row -->
+			</div>   	<!-- End container -->
+		</section>   <!-- End section -->
+
 <!--
 Start Our Team
 =========================================== -->
 
-<section id="our-team" class="section">
+<section id="team" class="section">
 	<div class="container">
 		<div class="row">
 
@@ -670,10 +698,10 @@ Start Our Team
         						<!-- member social profile -->
         						<div class="mask">
         							<ul class="list-inline">
-        								<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-        								<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-        								<li><a href="#"><i class="tf-ion-social-linkedin"></i></a></li>
-        								<li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li>
+        								<li><a href="https://www.facebook.com/shampa.chakraverty"><i class="tf-ion-social-facebook"></i></a></li>
+        								<!-- <li><a href="#"><i class="tf-ion-social-twitter"></i></a></li> -->
+        								<li><a href="https://www.linkedin.com/in/shampa-chakraverty-b6ab8910"><i class="tf-ion-social-linkedin"></i></a></li>
+        								<!-- <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li> -->
         							</ul>
         						</div>
         						<!-- /member social profile -->
@@ -703,10 +731,10 @@ Start Our Team
 						<!-- member social profile -->
 						<div class="mask">
 							<ul class="list-inline">
-								<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-linkedin"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li>
+								<li><a href="https://www.facebook.com/aishanya.singh.75"><i class="tf-ion-social-facebook"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-twitter"></i></a></li> -->
+								<li><a href="https://www.linkedin.com/in/aishanya-singh-2b7632136"><i class="tf-ion-social-linkedin"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li> -->
 							</ul>
 						</div>
 						<!-- /member social profile -->
@@ -736,10 +764,10 @@ Start Our Team
 						<!-- member social profile -->
 						<div class="mask">
 							<ul class="list-inline">
-								<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-linkedin"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li>
+								<li><a href="https://www.facebook.com/pratyush.goel.71"><i class="tf-ion-social-facebook"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-twitter"></i></a></li> -->
+								<li><a href="https://www.linkedin.com/in/pratyush-goel-248633136"><i class="tf-ion-social-linkedin"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li> -->
 							</ul>
 						</div>
 						<!-- /member social profile -->
@@ -768,10 +796,10 @@ Start Our Team
 						<!-- member social profile -->
 						<div class="mask">
 							<ul class="list-inline">
-								<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-linkedin"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li>
+								<li><a href="https://www.facebook.com/profile.php?id=100001390397235"><i class="tf-ion-social-facebook"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-twitter"></i></a></li> -->
+								<li><a href="https://www.linkedin.com/in/shubham-singh-a3755111b"><i class="tf-ion-social-linkedin"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li> -->
 							</ul>
 						</div>
 						<!-- /member social profile -->
@@ -800,10 +828,10 @@ Start Our Team
 						<!-- member social profile -->
 						<div class="mask">
 							<ul class="list-inline">
-								<li><a href="#"><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-linkedin"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li>
+								<li><a href="https://www.facebook.com/raghav.kumar.12914216"><i class="tf-ion-social-facebook"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-twitter"></i></a></li> -->
+								<li><a href="https://www.linkedin.com/in/raghav-kumar-79b002135"><i class="tf-ion-social-linkedin"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li> -->
 							</ul>
 						</div>
 						<!-- /member social profile -->
@@ -826,149 +854,10 @@ Start Our Team
 </section>   <!-- End section -->
 
 
-<!-- Start Pricing section
-		=========================================== -->
-
-		<section id="pricing" class="pricing section">
-			<div class="container">
-				<div class="row">
-
-					<!-- section title -->
-				    <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
-			        	<h2>Our Greatest<span class="color"> Plans</span></h2>
-				        <div class="border"></div>
-				    </div>
-				    <!-- /section title -->
-
-					<!-- single pricing table -->
-					<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="200ms">
-						<div class="price-item">
-
-							<!-- plan name & value -->
-							<div class="price-title">
-								<h3>Free</h3>
-								<p><strong class="value">$99</strong>/ month</p>
-							</div>
-							<!-- /plan name & value -->
-
-							<!-- plan description -->
-							<ul>
-								<li>1GB Disk Space</li>
-								<li>10 Email Account</li>
-								<li>Script Installer</li>
-								<li>1 GB Storage</li>
-								<li>10 GB Bandwidth</li>
-								<li>24/7 Tech Support</li>
-							</ul>
-							<!-- /plan description -->
-
-							<!-- signup button -->
-							<a class="btn btn-transparent" href="#">Signup</a>
-							<!-- /signup button -->
-
-						</div>
-					</div>
-					<!-- end single pricing table -->
-
-					<!-- single pricing table -->
-					<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="400ms">
-						<div class="price-item">
-
-							<!-- plan name & value -->
-							<div class="price-title">
-								<h3>Silver</h3>
-								<p><strong class="value">$149</strong/>/ month</p>
-							</div>
-							<!-- /plan name & value -->
-
-							<!-- plan description -->
-							<ul>
-								<li>1GB Disk Space</li>
-								<li>10 Email Account</li>
-								<li>Script Installer</li>
-								<li>1 GB Storage</li>
-								<li>10 GB Bandwidth</li>
-								<li>24/7 Tech Support</li>
-							</ul>
-							<!-- /plan description -->
-
-							<!-- signup button -->
-							<a class="btn btn-transparent" href="#">Signup</a>
-							<!-- /signup button -->
-
-						</div>
-					</div>
-					<!-- end single pricing table -->
-
-					<!-- single pricing table -->
-					<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="600ms">
-						<div class="price-item">
-
-							<!-- plan name & value -->
-							<div class="price-title">
-								<h3>Gold</h3>
-								<p><strong class="value">$199</strong/>/ month</p>
-							</div>
-							<!-- /plan name & value -->
-
-							<!-- plan description -->
-							<ul>
-								<li>1GB Disk Space</li>
-								<li>10 Email Account</li>
-								<li>Script Installer</li>
-								<li>1 GB Storage</li>
-								<li>10 GB Bandwidth</li>
-								<li>24/7 Tech Support</li>
-							</ul>
-							<!-- /plan description -->
-
-							<!-- signup button -->
-							<a class="btn btn-transparent" href="#">Signup</a>
-							<!-- /signup button -->
-
-						</div>
-					</div>
-					<!-- end single pricing table -->
-
-					<!-- single pricing table -->
-					<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="750ms">
-						<div class="price-item">
-
-							<!-- plan name & value -->
-							<div class="price-title">
-								<h3>Platinum</h3>
-								<p><strong class="value">$299</strong/>/ month</p>
-							</div>
-							<!-- /plan name & value -->
-
-							<!-- plan description -->
-							<ul>
-								<li>1GB Disk Space</li>
-								<li>10 Email Account</li>
-								<li>Script Installer</li>
-								<li>1 GB Storage</li>
-								<li>10 GB Bandwidth</li>
-								<li>24/7 Tech Support</li>
-							</ul>
-							<!-- /plan description -->
-
-							<!-- signup button -->
-							<a class="btn btn-transparent" href="#">Signup</a>
-							<!-- /signup button -->
-
-						</div>
-					</div>
-					<!-- end single pricing table -->
-
-
-				</div>       <!-- End row -->
-			</div>   	<!-- End container -->
-		</section>   <!-- End section -->
-
 <!-- Start Testimonial
 		=========================================== -->
 
-<section id="testimonial" class="testimonial overly section bg-2" >
+<section id="rules" class="testimonial overly section bg-2" >
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 " style="margin-top:-5%">
@@ -1048,7 +937,7 @@ The place of interest of treks may chosen by participants themselves but should 
 Start Blog Section
 =========================================== -->
 
-<section id="faq" class="page-section light overly section">
+<section id="FAQS" class="page-section light overly section">
               <div class="container">
                   <div class="row">
                       <div class="col-md-8 pull-left">
@@ -1154,26 +1043,26 @@ Start Blog Section
 			<!-- Contact Details -->
 			<div class="contact-info col-md-6 wow fadeInUp" data-wow-duration="500ms">
 				<h3>Contact Details</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore adipisci.</p>
+				<p>in case of any queries you can contact us via this form or via the channels given below:</p>
 				<div class="contact-details">
 					<div class="con-info clearfix">
 						<i class="tf-map-pin"></i>
-						<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
+						<span>Netaji Subhas Institue of Technology,Dwarka Sec-3,DELHI</span>
 					</div>
 
 					<div class="con-info clearfix">
 						<i class="tf-ion-ios-telephone-outline"></i>
-						<span>Phone: +880-31-000-000</span>
+						<span>&nbsp;Shubham Singh:+91 97117 78196</span>
 					</div>
+                    <div class="con-info clearfix">
+                        <i class="tf-ion-ios-telephone-outline"></i>
+                        <span>&nbsp;Aishanya Singh:+91 97i61 07555</span>
+                    </div>
 
-					<div class="con-info clearfix">
-						<i class="tf-ion-iphone"></i>
-						<span>Fax: +880-31-000-000</span>
-					</div>
 
 					<div class="con-info clearfix">
 						<i class="tf-ion-ios-email-outline"></i>
-						<span>Email: hello@meghna.com</span>
+						<span>Email:teamc.hackeam2018@gmail.com</span>
 					</div>
 				</div>
 			</div>
@@ -1181,7 +1070,7 @@ Start Blog Section
 
 			<!-- Contact Form -->
 			<div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-				<form id="contact-form" method="post" action="sendmail.php" role="form">
+				<form id="contact-form" method="post" action="https://formspree.io/pratyush.sherlock@gmail.com" role="form">
 
 					<div class="form-group">
 						<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
@@ -1241,13 +1130,14 @@ Start Blog Section
 						<!-- Footer Social Links -->
 						<div class="social-icon">
 							<ul class="list-inline">
-								<li><a href=""><i class="tf-ion-social-facebook"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-twitter"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-google-outline"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-youtube"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-linkedin"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li>
-								<li><a href="#"><i class="tf-ion-social-pinterest-outline"></i></a></li>
+								<li><a href="https://www.facebook.com/events/290600888128563/?ti=cl"><i class="tf-ion-social-facebook"></i></a></li>
+								<!-- <li><a href=""><i class="tf-ion-social-twitter"></i></a></li> -->
+								<!-- <li><a href="#"><i class="tf-ion-social-google-outline"></i></a></li> -->
+								<li><a href="https://www.flickr.com/people/teamc2018/"><i class="fa fa-flickr"></i></a></li>
+								<li><a href="https://www.linkedin.com/company/13598575/"><i class="tf-ion-social-linkedin"></i></a></li>
+                                <li><a href="https://www.instagram.com/hackeam_2018/"><i class="tf-ion-social-instagram"></i></a></li>
+								<!-- <li><a href="#"><i class="tf-ion-social-dribbble-outline"></i></a></li> -->
+								<!-- <li><a href="#"><i class="tf-ion-social-pinterest-outline"></i></a></li> -->
 							</ul>
 						</div>
 						<!--/. End Footer Social Links -->
