--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Meghna One page parallax responsive HTML Template ">
+        <meta name="description" content="HACKEAM18">
 
-        <meta name="author" content="Muhammad Morshed">
+        <meta name="author" content="pratyush goel">
 
         <title>Hackeam-18</title>
 
@@ -212,7 +212,7 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-6 padding-0 ">
-				<img class="img-responsive" src="images/about/about-business-man.jpg" alt="" style="height:80vh;">
+				<img class="img-responsive" src="images/different.jpg" alt="" style="height:90vh;">
 			</div>
 			<div class="col-md-6">
 				<div class="content-block">
@@ -259,7 +259,7 @@ Start Call To Action
 				<p>
 				    Register in this new unique and exciting hackathon o win prizes worth a ton.
 				</p>
-                <a href="" class="btn btn-main">Coming Soon</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSckm90OwewqAXCYVRUSWplnj4Ia6PpxYjnybtN4v5uU3LXWQw/viewform?usp=sf_link" target="_blank" class="btn btn-main">Click here to Register</a>
 			</div>
 		</div> 		<!-- End row -->
 	</div>   	<!-- End container -->
@@ -413,7 +413,7 @@ Start Call To Action
 								</div>
 							</li>
 							<li>
-									<p><span>05-</span>Results fo Hackathon</p>
+									<p><span>05-</span>Results of Hackathon</p>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="70"
 										aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -661,7 +661,7 @@ Start Counter Section
 			        	<h2>Our<span class="color"> Sponsors</span></h2>
 				        <div class="border"></div>
 				    </div>
-                    <img src="./images/comingsoon.png" alt="" class="img-responsive" style="margin:0 auto">
+                    <img src="./images/comingsoon.png" alt="" class="img-responsive" style="margin:50px auto">
 				    <!-- /section title -->
                         <!-- <h1>COMING SOON</h1> -->
 					<!-- single pricing table -->
@@ -1070,7 +1070,7 @@ Start Blog Section
 
 			<!-- Contact Form -->
 			<div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-				<form id="contact-form" method="post" action="https://formspree.io/pratyush.sherlock@gmail.com" role="form">
+				<form id="contact-form" method="post" action="https://formspree.io/teamc.hackeam2018@gmail.com" role="form">
 
 					<div class="form-group">
 						<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
